<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_page_title"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/user_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name_label"
        app:layout_constraintTop_toBottomOf="@id/login_title"/>

    <TextView
        android:id="@+id/pass_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        app:layout_constraintTop_toBottomOf="@id/user_entry"/>

    <EditText
        android:id="@+id/pass_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/pass_label" />

    <EditText
        android:id="@+id/user_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/user_label" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        app:layout_constraintTop_toBottomOf="@id/pass_entry"/>

</android.support.constraint.ConstraintLayout>