<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


        <TextView
            android:id="@+id/status_label"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/status_label"
            android:textSize="25sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/status_variable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="25sp"
            app:layout_constraintLeft_toRightOf="@+id/status_label"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="20dp"/>


        <TextView
            android:id="@+id/mode_label"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/mode_label"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/status_label"
            android:gravity="center"/>

        <TextView
            android:id="@+id/mode_variable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="25sp"
            app:layout_constraintLeft_toRightOf="@+id/mode_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_variable"
            android:layout_marginLeft="20dp"/>


        <TextView
            android:id="@+id/cur_user_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cur_user_label"
            android:textSize="25sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/mode_label" />


        <TextView
            android:id="@+id/cur_user_variable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="25sp"
            app:layout_constraintLeft_toRightOf="@+id/cur_user_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mode_variable"
            android:layout_marginLeft="20dp"/>


</android.support.constraint.ConstraintLayout>